@@ -24,6 +24,7 @@
 #include "svg.h"
 #include "svg-style.h"
 #include "svg-rc-style.h"
+#include "rsvg-private.h"
 #include <gmodule.h>
 
 G_MODULE_EXPORT const gchar* g_module_check_init (GModule *module);
@@ -34,6 +35,7 @@ G_MODULE_EXPORT GtkRcStyle * theme_create_rc_style (void);
 void
 theme_init (GTypeModule *module)
 {
+  _rsvg_register_types (module); /* HACK to get around bugs 357406 and 362217 */
   rsvg_rc_style_register_type (module);
   rsvg_style_register_type (module);
 }
