@@ -31,4 +31,5 @@ rsvg_handle_render_cairo_sub
 rsvg_handle_get_type
 _rsvg_size_callback
 _rsvg_acquire_xlink_href_resource
+_rsvg_register_types
 rsvg_pixbuf_from_data_with_size_data
