@@ -1,5 +1,16 @@
 2006-11-02  Dom Lachowicz <domlachowicz@gmail.com>
 
+	* rsvg-gobject.c: Introduce PRIVATE API to get around bugs 357406 and 362217.
+	IMHO, gobject's type registration and quark/error system is fundamentally 
+	broken with respect to (un)loadable modules such as GTK+ theme engines. This 
+	is the best I can do for now without breaking librsvg's API. This may cause
+	as many headaches as it fixes, though.
+	* rsvg-private.h: Declare new _rsvg_register_types() function
+	* gtk-engine/svg-main.c: Invoke new type registration function
+	* librsvg.def: export this function
+	
+2006-11-02  Dom Lachowicz <domlachowicz@gmail.com>
+
 	* rsvg-base.c: Use g_quark_from_string() because librsvg might be used
 	in a plugin that gets unloaded
 	
